--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ footer {
 
 button[type="submit"] {
     padding: 10px 20px;
-    background-color: #8eccd4;
+    background-color: #792b00;
     color: #ffffff;
     border: none;
     border-radius: 5px;
