--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ section {
 }
 
 .skill-meter {
-    background-color: #792b00;
+    background-color: #9ed3d08c;
     height: 20px;
     border-radius: 5px;
     margin-bottom: 5px;
